--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "relative-strength-proxy",
   "version": "1.0.0",
-  "dependencies": {},
-  "devDependencies": {},
-  "scripts": {}
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "dev": "vercel dev",
+    "start": "vercel start"
+  },
+  "dependencies": {
+    "axios": "^1.6.8"
+  }
 }
