--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "relative-strength-proxy",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "dev": "vercel dev",
-    "start": "vercel start"
-  },
   "dependencies": {
-    "axios": "^1.6.8"
+    "axios": "^1.6.0",
+    "date-fns": "^3.3.1"
   }
 }
+
