--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/market_chart.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/api/market_chart",
-      "methods": ["GET"],
-      "dest": "api/market_chart.ts"
+      "dest": "api/market_chart.js"
     }
   ]
 }
